# DesignPatterns

./: CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/: copilot-instructions.md
.github/agents/: requirements-generator.agent.md  requirements-review.agent.md  tdd-c-cpp.agent.md
.github/hooks/: README.md  requirements-review-to-generator.hook.json  requirements-review-trigger.hook.json  run_requirements_generator.sh  run_requirements_review.sh
.github/hooks/logs/: requirements-generator-input.md  requirements-generator-output.md  requirements-review-output.md
.github/workflows/: validate-specs.yml
creational/factory/: FactoryPattern.md
creational/factory/example/: CMakeLists.txt  Makefile  makedebug.txt
creational/factory/example/c/: CMakeLists.txt  README.md  factory.c  factory.h
creational/factory/example/c/test/: test_factory_gtest.cpp  test_factory_simple.c
creational/factory/example/cpp/: CMakeLists.txt  FactoryExample.cpp  FactoryExample.h  FactoryExampleMain.cpp
creational/factory/example/cpp/tests/: test_factory.cpp  test_factory_simple.cpp
specs/: README.md  package-lock.json  package.json  security.md  validate-schemas.js
specs/api/: admin-review.yaml  razorpay-webhook.yaml
specs/schemas/: business_analysis.schema.json  growth_analysis.schema.json  interest_assessment.schema.json  management_analysis.schema.json  moat_analysis.schema.json  phase_analysis.schema.json  risk_analysis.schema.json  saved_payload.schema.json  valuation_assessment.schema.json
